salesforce/force-app/main/default/objects/DrivingForce_Lead__c/DrivingForce_Lead__c.object-meta.xml
<CustomObject>
    <label>DrivingForce Lead</label>
    <nameField>
        <displayFormat>DFL-{00000}</displayFormat>
        <label>DrivingForce Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DrivingForce Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>