salesforce/force-app/main/default/objects/DrivingForce_Lead__c/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Enquiry</fullName>
            </value>
            <value>
                <fullName>Test Drive</fullName>
            </value>
            <value>
                <fullName>Price Enquiry</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>