salesforce/force-app/main/default/objects/DrivingForce_Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Test Drive</fullName>
            </value>
            <value>
                <fullName>Vehicle Details</fullName>
            </value>
            <value>
                <fullName>Contact Form</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>