salesforce/force-app/main/default/objects/DrivingForce_Lead__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>DrivingForce Leads</relationshipLabel>
    <relationshipName>DrivingForce_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>